# wilkuu-xyz

./: .env.template  .gitattributes  .gitignore  Cargo.toml
frontend/: package-lock.json  package.json  rollup.config.js
frontend/js/: main.ts
frontend/scss/: _variables.scss  animated_bg.scss  custom.scss  danger.scss  styleMain.css
public/: robots.txt
public/assets/: deez_nuts.html
public/assets/videoProject/: VPDisplay.html  config.xml  playlist.xml
public/assets/videoProject/ximpel/: ximpel.css  ximpel.js  ximpel.min.js
public/css/: profdev.css
public/img/: beheeer.jpg~  bg.kra  bg.kra-autosave.kra  bg.kra~  bg.png~  business.jpg~
rs/: main.rs
rs/controllers/: mod.rs  portfolio.rs  staticpage.rs
rs/models/: mod.rs  portfolio_entry.rs
templates/: announcer_.html  empty.html  error.html  footer.html  index.html  inttech.html  main.html  nav.html  portfolio.html  portfolio_legacy.html  profdev.html  template_test.html  tera_reset.html
templates/pd_includes/: adventures.html  challenges.html  important_lessons.html  profdev_macros.html  strengths.html  tips.html
templates/portfolio/: A01.html  A02.html  A03.html  A04.html  A05.html  A06.html  A07.html  A08.html  A09.html  A10.html  A11.html  A12.html  A13.html  A14.html  A15.html  A16.html  A17.html
